# sayle

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: app.py
app/config/: config.py
app/routes/: conversations.py
chatbot/bot/: custom_bot.py  trainer.py
chatbot/config/: bot_config.py
chatbot/data/: greetings.json
